@@ -28,47 +28,41 @@ compileKotlin.kotlinOptions {
 
 val compileTestKotlin: KotlinCompile by tasks
 compileTestKotlin.kotlinOptions {
-    jvmTarget = "1.8"
+    jvmTarget = "17"
 }
 
 tasks.withType<JavaCompile> {
     options.compilerArgs.add("-Xlint")
-    options.compilerArgs.add("--enable-preview")
 }
 
 
 // Java 9
 tasks.register<JavaExec>("DemoPrivateMethodInInterface") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("j9.DemoPrivateMethodInInterface")
 }
 
 tasks.register<JavaExec>("DemoDiamondOperatorForAnonymousInnerClasses") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("j9.DemoDiamondOperatorForAnonymousInnerClasses")
 }
 
 tasks.register<JavaExec>("DemoNewTryWithResources") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("j9.DemoNewTryWithResources")
 }
 
 tasks.register<JavaExec>("DemoNewOptionalMethods") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("j9.DemoNewOptionalMethods")
 }
 
 tasks.register<JavaExec>("DemoCollectionFactoryMethods") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("j9.DemoCollectionFactoryMethods")
 }
@@ -76,7 +70,6 @@ tasks.register<JavaExec>("DemoCollectionFactoryMethods") {
 // Java 10
 tasks.register<JavaExec>("DemoLocalTypeInference") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("j10.DemoLocalTypeInference")
 }
@@ -84,7 +77,6 @@ tasks.register<JavaExec>("DemoLocalTypeInference") {
 // Java 14
 tasks.register<JavaExec>("DemoSwitchExpressions") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("j14.DemoSwitchExpressions")
 }
@@ -92,14 +84,12 @@ tasks.register<JavaExec>("DemoSwitchExpressions") {
 // Java 15
 tasks.register<JavaExec>("DemoNPEBetterErrorMsg") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("j15.DemoNPEBetterErrorMsg")
 }
 
 tasks.register<JavaExec>("DemoTextBlock") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("j15.DemoTextBlock")
 }
@@ -107,57 +97,50 @@ tasks.register<JavaExec>("DemoTextBlock") {
 // Java 16
 tasks.register<JavaExec>("DemoInstanceofPatternMatching") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("j16.DemoInstanceofPatternMatching")
 }
 
 tasks.register<JavaExec>("DemoRecords") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("j16.DemoRecords")
 }
 
+// Java 17
 tasks.register<JavaExec>("DemoSealedInterface") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
-    mainClass.set("j16.DemoSealedInterface")
+    mainClass.set("j17.DemoSealedInterface")
 }
 
 // Kotlin
 tasks.register<JavaExec>("DemoNullSafety") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("DemoNullSafetyKt")
 }
 
 tasks.register<JavaExec>("DemoFunctions") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("DemoFunctionsKt")
 }
 
 tasks.register<JavaExec>("DemoDataClasses") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("DemoDataClassesKt")
 }
 
 tasks.register<JavaExec>("DemoExtensions") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("DemoExtensionsKt")
 }
 
 tasks.register<JavaExec>("DemoStringInterpolation") {
     dependsOn("classes")
-    jvmArgs("--enable-preview")
     classpath = sourceSets["main"].runtimeClasspath
     mainClass.set("DemoStringInterpolationKt")
 }
